default/xxl-job/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: xxl-job
  name: xxl-job
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xxl-job
  template:
    metadata:
      labels:
        app: xxl-job
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      dnsConfig:
        options:
        - name: ndots
          value: "5"
      containers:
      - image: xuxueli/xxl-job-admin:2.3.0
        name: xxl-job
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        startupProbe:
          tcpSocket:
            port: 8080
          failureThreshold: 5
          periodSeconds: 3
          initialDelaySeconds: 20
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 3
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 3
        resources:
          requests:
            cpu: "300m"
            memory: "2Gi"
          limits:
            memory: "2Gi"
