default/xxl-job/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:

  name: xxl-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # 开启use-regex，启用path的正则匹配
    nginx.ingress.kubernetes.io/use-regex: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/secure-backends: "true"
    #nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    #nginx.ingress.kubernetes.io/use-proxy-protocol: "false"
spec:
  rules:
    # 定义域名
    - host: xxl-job.your-domain.com
      http:
        paths:
        # 不同path转发到不同端口
          - path: /
            pathType: Prefix
            backend:
              service:
                name: xxl-job
                port:
                  number: 8080
